# beedb

./: Cargo.toml  README.md  toolchain.toml
acorn/: Cargo.toml  TODO.md  cargo-test-154776-4207902546845758559_0.profraw  default_13126396627543614871_0_154350.profraw
acorn/src/: consts.rs  file.rs  id.rs  index.rs  io.rs  lib.rs  lock.rs  page.rs  storage.rs  wal.rs
acorn/src/cache/: _buffer.rs  _storage.rs  api.rs  buffer.rs  manager.rs  mod.rs
acorn/src/disk/: dir.rs  lock.rs  meta.rs  mod.rs  segment.rs  storage.rs  wal.rs
acorn/src/file_format/: mod.rs  wal.rs
acorn/src/files/: mod.rs  wal.rs
acorn/src/format/: meta.rs  mod.rs  state.rs
acorn/src/format/pages/: freelist.rs  header.rs  mod.rs
acorn/src/io/: mod.rs  target.rs
acorn/src/io/format/: header.rs  mod.rs
acorn/src/manage/: alloc.rs  api.rs  err.rs  index.rs  mod.rs  page_access.rs  read.rs  recovery.rs  rw.rs  segment.rs  segment_alloc.rs  transaction.rs  write.rs  write_queue.rs
acorn/src/pages/: b_tree.rs  freelist.rs  header.rs  mod.rs  page_buffer.rs  storage.rs
acorn/src/segment/: dir.rs  mod.rs
acorn/src/segment/format/: header.rs
acorn/src/storage/: dir.rs  file.rs  format.rs  lock.rs  meta.rs  mod.rs
acorn/src/storage/format/: freelist.rs  header.rs
acorn/src/utils/: aligned_buf.rs  array_map.rs  array_set.rs  byte_order.rs  byte_view.rs  mod.rs  units.rs
byte_view/: Cargo.toml
byte_view/src/: buf.rs  bytes.rs  lib.rs  slice.rs  transmute.rs  view.rs
byte_view_macros/: Cargo.toml
byte_view_macros/src/: lib.rs
byte_view_macros/tests/: derive_byte_view.rs
crates/acorn/: Cargo.toml
crates/acorn/src/: consts.rs  lib.rs  model.rs  pages.rs  repr.rs  tasks.rs  utils.rs
crates/acorn/src/database/: alloc.rs  document.rs  document_repr.rs  mod.rs  pages.rs
crates/acorn/src/doc_store/: document_repr.rs  mod.rs  page_alloc.rs  pages.rs
crates/acorn/src/files/: generic.rs  mod.rs  segment.rs  utils.rs  wal.rs
crates/acorn/src/page_store/: cache.rs  mod.rs  physical.rs  wal.rs
crates/acorn/src/storage/: cache.rs  mod.rs  physical.rs  wal.rs
crates/acorn/src/utils/: cache.rs  macros.rs  mod.rs  test_helpers.rs
crates/beedb_hive/: Cargo.toml
(+18 files in other folders)
