[package]
name = "acorn"
version = "0.1.0"
edition = "2021"

[dependencies]
byte_view = { version = "0.1.0", path = "../byte_view" }
mockall = { version = "0.12.1", features = ["nightly"] }
parking_lot = "0.12.1"
static_assertions = "1.1.0"
thiserror = "1.0.50"

[dev-dependencies]
tempfile = "3.9.0"
