[package]
name = "acorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.2.1"
memmap2 = "0.9.4"
zerocopy = { version = "0.7.32", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
mockall = { version = "0.12.1", features = ["nightly"] }
tempfile = { version = "3.10.1", features = ["nightly"] }
