[package]
name = "acorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.2.1"
zerocopy = { version = "0.8.14", features = ["derive"] }
thiserror = "2.0.11"
static_assertions = { version = "1.1.0", features = ["nightly"] }
parking_lot = { version = "0.12.3", features = ["nightly"] }
log = "0.4.25"
futures = { version = "0.3.31", features = ["thread-pool"] }
io-uring = "0.7.4"

[dev-dependencies]
mockall = { version = "0.13.1", features = ["nightly"] }
tempfile = { version = "3.15.0", features = ["nightly"] }
pretty_assertions = { path = "../pretty_assertions" }
